Add trajecto video

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -33,14 +33,14 @@ section div.video
 	margin-right: auto;
 }
 
-section div.video div.videosource
+section div.video div.videocomment
 {
 	text-align: right;
 	font-size: small;
 	color: gray;
 }
 
-section div.video div.videosource a
+section div.video div.videocomment a
 {
 	text-decoration: underline;
 	color: gray;
