--- a/css/resume.css
+++ b/css/resume.css
@@ -2,9 +2,11 @@
 {
 	div.page
 	{
+		/*
 		page-break-before: avoid;
 		page-break-after: always;
 		padding: 10mm 0mm 10mm 0mm;
+		*/
 	}
 }
 
@@ -18,6 +20,8 @@ div.page
 
 body
 {
+	color-adjust: exact;
+	-webkit-print-color-adjust: exact !important;
 	font-family:sans-serif;
 }
 
@@ -32,6 +36,7 @@ section
 	border-style: solid;
 	border-radius: 10px 10px 10px 10px;
 	box-sizing:border-box;
+	font-size: 14px;
 }
 section h2
 {		
@@ -100,7 +105,7 @@ body>div>div
 #experiences>ul, 
 #education>ul
 {
-	padding:5px;
+	padding:3px;
 	margin:0px;
 	list-style-type:none;
 	position: relative;
@@ -110,7 +115,7 @@ body>div>div
 #education>ul>li
 {
 	width:100%;
-	padding-bottom: 5px;
+	padding-bottom: 3px;
 	display:inline-block;
 	box-sizing:border-box;
 }
@@ -124,8 +129,8 @@ body>div>div
 {
 	margin:0px;
 	padding:0px;
-	padding-top:5px;
-	padding-bottom:5px;
+	padding-top:3px;
+	padding-bottom:3px;
 	box-sizing:border-box;
 }
 #experiences>ul>li>div:first-child, 
@@ -133,7 +138,7 @@ body>div>div
 {
 	text-align:center;
 	display:inline-block;
-	width:165px;
+	width:170px;
 }
 #experiences>ul>li>div:first-child>time, 
 #education>ul>li>div:first-child>time
@@ -178,7 +183,7 @@ body>div>div
 	padding-left:25px;
 	vertical-align:top;
 	text-align: left;
-	width: calc(100% - 165px);
+	width: calc(100% - 170px);
 }
 #experiences>ul>li>div:last-child>h3, 
 #education>ul>li>div:last-child>h3
@@ -186,15 +191,25 @@ body>div>div
 	margin:0px;
 	padding:0px;
 }
+#experiences>ul>li>div:last-child>span.jobtitle, 
+#education>ul>li>div:last-child>span.jobtitle
+{
+	font-weight: bold;
+}
+#experiences>ul>li>div:last-child>span.company::before, 
+#education>ul>li>div:last-child>span.company::before
+{
+	content:' @ ';
+}
 #experiences>ul>li>div:last-child>span.localisation::before, 
 #education>ul>li>div:last-child>span.localisation::before
 {
-	content:' @ ';
+	content:' (';
 }
 #experiences>ul>li>div:last-child>span.website::before, 
 #education>ul>li>div:last-child>span.website::before
 {
-	content:'(';
+	content:' - ';
 	font-weight: normal;
 }
 #experiences>ul>li>div:last-child>span.website::after, 
@@ -324,7 +339,7 @@ span.small
 }
 #contact div
 {
-	padding-left:10px;
+	padding-left:30px;
 	display:inline-block;
 	vertical-align:middle;
 	text-align:center;
