--- a/css/resume.css
+++ b/css/resume.css
@@ -18,6 +18,8 @@ div.page
 
 body
 {
+	color-adjust: exact;
+	-webkit-print-color-adjust: exact !important;
 	font-family:sans-serif;
 }
 
@@ -32,6 +34,7 @@ section
 	border-style: solid;
 	border-radius: 10px 10px 10px 10px;
 	box-sizing:border-box;
+	font-size: 15px;
 }
 section h2
 {		
@@ -133,7 +136,7 @@ body>div>div
 {
 	text-align:center;
 	display:inline-block;
-	width:165px;
+	width:130px;
 }
 #experiences>ul>li>div:first-child>time, 
 #education>ul>li>div:first-child>time
@@ -175,10 +178,10 @@ body>div>div
 {
 	display: inline-block;
 	position:relative;
-	padding-left:25px;
+	padding-left:15px;
 	vertical-align:top;
 	text-align: left;
-	width: calc(100% - 165px);
+	width: calc(100% - 130px);
 }
 #experiences>ul>li>div:last-child>h3, 
 #education>ul>li>div:last-child>h3
@@ -186,16 +189,44 @@ body>div>div
 	margin:0px;
 	padding:0px;
 }
-#experiences>ul>li>div:last-child>span.localisation::before, 
-#education>ul>li>div:last-child>span.localisation::before
+#experiences>ul>li>div:last-child>span.jobtitle, 
+#education>ul>li>div:last-child>span.jobtitle
+{
+	font-weight: bold;
+}
+
+#experiences>ul>li>div:last-child>span.company::before, 
+#education>ul>li>div:last-child>span.company::before
 {
 	content:' @ ';
 }
+#experiences>ul>li>div:last-child>span.company, 
+#education>ul>li>div:last-child>span.company
+{
+	font-size: 13px;
+}
+
+#experiences>ul>li>div:last-child>span.localisation::before, 
+#education>ul>li>div:last-child>span.localisation::before
+{
+	content:' (';
+}
+#experiences>ul>li>div:last-child>span.localisation, 
+#education>ul>li>div:last-child>span.localisation
+{
+	font-size: 13px;
+}
+
 #experiences>ul>li>div:last-child>span.website::before, 
 #education>ul>li>div:last-child>span.website::before
 {
-	content:'(';
+	content:' - ';
 	font-weight: normal;
+}
+#experiences>ul>li>div:last-child>span.website, 
+#education>ul>li>div:last-child>span.website
+{
+	font-size: 13px;
 }
 #experiences>ul>li>div:last-child>span.website::after, 
 #education>ul>li>div:last-child>span.website::after
@@ -203,6 +234,7 @@ body>div>div
 	content:')';
 	font-weight: normal;
 }
+
 #experiences>ul>li>div:last-child>ul, 
 #education>ul>li>div:last-child>ul
 {
@@ -324,7 +356,7 @@ span.small
 }
 #contact div
 {
-	padding-left:10px;
+	padding-left:20px;
 	display:inline-block;
 	vertical-align:middle;
 	text-align:center;
